fixed issue with saving event file.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.0.1, 4/8/21 -- Initial release.
 v0.2.0, 5/5/21 -- Changed to an object oriented structure for the package.
-v0.2.0, 5/5/21 -- Fixed error with data files not being included with package.
+v0.3.0, 5/5/21 -- Fixed error with data files not being included with package.
+v0.3.1, 5/6/21 -- Fixed error with saving event file.
