Fixed units error for converting 4-momenta energies to wavelengths.

--- a/notebooks/processmcrat_example.ipynb
+++ b/notebooks/processmcrat_example.ipynb
@@ -60,9 +60,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: processmcrat in /opt/anaconda3/lib/python3.7/site-packages (0.3.2)\n",
+      "Requirement already satisfied: pyparsing>=2.4.7 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (2.4.7)\n",
+      "Requirement already satisfied: numpy>=1.20.2 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (1.20.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (1.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (2.8.1)\n",
+      "Requirement already satisfied: numexpr>=2.7.3 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (2.7.3)\n",
+      "Requirement already satisfied: astropy>=4.2.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages/astropy-4.2.1-py3.7-macosx-10.9-x86_64.egg (from processmcrat) (4.2.1)\n",
+      "Requirement already satisfied: matplotlib>=3.4.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (3.4.1)\n",
+      "Requirement already satisfied: certifi>=2020.12.5 in /opt/anaconda3/lib/python3.7/site-packages (from processmcrat) (2020.12.5)\n",
+      "Requirement already satisfied: cycler>=0.10.0 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (0.10.0)\n",
+      "Requirement already satisfied: Pillow>=8.2.0 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (8.2.0)\n",
+      "Requirement already satisfied: tables>=3.6.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (3.6.1)\n",
+      "Requirement already satisfied: gdown>=3.13.0 in /opt/anaconda3/lib/python3.7/site-packages (from processmcrat) (3.13.0)\n",
+      "Requirement already satisfied: scipy>=1.6.2 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (1.6.2)\n",
+      "Requirement already satisfied: cached-property>=1.5.2 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (1.5.2)\n",
+      "Requirement already satisfied: h5py>=3.2.1 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (3.2.1)\n",
+      "Requirement already satisfied: pyerfa>=1.7.3 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages/pyerfa-1.7.3-py3.7-macosx-10.9-x86_64.egg (from processmcrat) (1.7.3)\n",
+      "Requirement already satisfied: six>=1.15.0 in /Users/Tylerparsotan/.local/lib/python3.7/site-packages (from processmcrat) (1.15.0)\n",
+      "Requirement already satisfied: tqdm in /opt/anaconda3/lib/python3.7/site-packages (from gdown>=3.13.0->processmcrat) (4.36.1)\n",
+      "Requirement already satisfied: filelock in /opt/anaconda3/lib/python3.7/site-packages (from gdown>=3.13.0->processmcrat) (3.0.12)\n",
+      "Requirement already satisfied: requests[socks]>=2.12.0 in /opt/anaconda3/lib/python3.7/site-packages (from gdown>=3.13.0->processmcrat) (2.22.0)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /opt/anaconda3/lib/python3.7/site-packages (from requests[socks]>=2.12.0->gdown>=3.13.0->processmcrat) (1.24.2)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /opt/anaconda3/lib/python3.7/site-packages (from requests[socks]>=2.12.0->gdown>=3.13.0->processmcrat) (2.8)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/anaconda3/lib/python3.7/site-packages (from requests[socks]>=2.12.0->gdown>=3.13.0->processmcrat) (3.0.4)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6; extra == \"socks\" in /opt/anaconda3/lib/python3.7/site-packages (from requests[socks]>=2.12.0->gdown>=3.13.0->processmcrat) (1.7.1)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install processmcrat"
    ]
@@ -76,9 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.pyplot._IonContext at 0x7ff338687210>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import processmcrat as pm\n",
     "import astropy.units as unit\n",
@@ -118,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16276,22 +16319,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py:621: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  sigma_U_r = np.sqrt(var_factor * (mu_factor / mu - U_r ** 2))\n"
+      "/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py:620: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  sigma_Q_r = np.sqrt(var_factor * (mu_factor / mu - Q_r ** 2))\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py:639: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  partial_pr_Ur * sigma_U_r) ** 2 + 2 * partial_pr_Qr * partial_pr_Ur * cov)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py:641: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  partial_phir_Ur * sigma_U_r) ** 2 + 2 * partial_phir_Qr * partial_phir_Ur * cov)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mclib.py:41: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  model[kk]=((alpha-beta)*break_energy)**(alpha-beta)*energies[kk]**(beta)*np.exp(beta-alpha)\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "Weights sum to zero, can't be normalized",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-45351a13c74a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_spectral_fit_parameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mspec_dict_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspectrum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m45\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mspectrum_unit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0munit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0munit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0munit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeV\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mfit_spectrum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mpol_dict_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolarization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py\u001b[0m in \u001b[0;36mpolarization\u001b[0;34m(self, time_start, time_end, photon_type, energy_range, energy_unit)\u001b[0m\n\u001b[1;32m    672\u001b[0m                 self._calc_polarization(self.detected_photons.s0[idx], self.detected_photons.s1[idx], \\\n\u001b[1;32m    673\u001b[0m                                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetected_photons\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetected_photons\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 674\u001b[0;31m                                         self.detected_photons.weight[idx])\n\u001b[0m\u001b[1;32m    675\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    676\u001b[0m             pol_dict=dict(stokes_i=stokes_i*unit.dimensionless_unscaled, stokes_q=stokes_q*unit.dimensionless_unscaled,\\\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/processmcrat/mockobservations.py\u001b[0m in \u001b[0;36m_calc_polarization\u001b[0;34m(self, s0, s1, s2, s3, weights, mu)\u001b[0m\n\u001b[1;32m    601\u001b[0m         \u001b[0;31m# calc the q and u normalized by I\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    602\u001b[0m         \u001b[0mI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# np.mean(weights) #np.sum(weights)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 603\u001b[0;31m         \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    604\u001b[0m         \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    605\u001b[0m         \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36maverage\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36maverage\u001b[0;34m(a, axis, weights, returned)\u001b[0m\n\u001b[1;32m    408\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscl\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m             raise ZeroDivisionError(\n\u001b[0;32m--> 410\u001b[0;31m                 \"Weights sum to zero, can't be normalized\")\n\u001b[0m\u001b[1;32m    411\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    412\u001b[0m         \u001b[0mavg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwgt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresult_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mscl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: Weights sum to zero, can't be normalized"
      ]
     }
    ],
    "source": [
     "#create the instrument that we need \n",
-    "inst=pm.Instrument(name='Swift_white', polarization_energy_range=[1.5,7.7], polarization_energy_unit=unit.eV)\n",
-    "#polarization_energy_range=[1597,7820], polarization_energy_unit=unit.angstrom)\n",
+    "inst=pm.Instrument(name='Swift_white',polarization_energy_range=[1597,7820], polarization_energy_unit=unit.angstrom) #polarization_energy_range=[1.5,7.7], polarization_energy_unit=unit.eV)\n",
+    "\n",
     "\n",
     "#create our observations for each observer viewing angle\n",
     "observation_list=[]\n",
