--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,3 +2,5 @@ v0.0.1, 4/8/21 -- Initial release.
 v0.2.0, 5/5/21 -- Changed to an object oriented structure for the package.
 v0.3.0, 5/5/21 -- Fixed error with data files not being included with package.
 v0.3.1, 5/6/21 -- Fixed error with saving event file.
+v0.3.2, 5/8/21 -- Fixed error with energy unit to wavelength unit.
+v0.3.3, 5/8/21 -- Properly fixed error with energy unit to wavelength unit.
