Modified jupyter notebook text to show new syntaxes for functions.

--- a/notebooks/processmcrat_example.ipynb
+++ b/notebooks/processmcrat_example.ipynb
@@ -587,9 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `observation.spectrum` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "observation.spectrum?"
    ]
@@ -598,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the docstring that pop ups, we saw that the default units of `spectrum_unit` was erg/s/keV, the energy range over which the spectrum was calculated was from [$10^{-7}$, $10^{5}$] with lograithmic step sizes of $0.1$. The default energy units are in keV, which is the normalization for the calculated spectrum. These defaults can be changed by passing in the values that we want. If we wanted the spectrum to be calculated from [$10^{2}$, $10^{8}$] eV with units of counts/s/eV then we set `spectrum_unit=unit.count/unit.s/unit.eV`, `log_energy_range=[2, 8]`, and `energy_unit=unit.eV`. This would look like:"
+    "From the docstring that pop ups, we saw that the default units of `spectrum_unit` was erg/s/keV, the energy range over which the spectrum was calculated was from [$10^{-7}$, $10^{5}$] keV with step sizes of $10^{0.1}$ keV. The default energy units are in keV, which is the energy unit for the calculated spectrum. These defaults can be changed by passing in the values that we want. If we wanted the spectrum to be calculated from [$10^{2}$, $10^{8}$] eV with units of counts/s/eV then we set `spectrum_unit=unit.count/unit.s/unit.eV` and `energy_range=[10**2, 10**8]*unit.eV`, and `delta_energy=1.26*unit.eV`. We need to ensure that the units of the `energy_range` and the `delta_energy` parameters are the same. Thus our function call would look like:"
    ]
   },
   {
@@ -671,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running the code below, we can see that we just initalized the spectral energy range that we want the spectral fitting to occur over to be from 8 to 40000 keV. We also specified that we want to fit any energy bins that have greater than 10 photons in them, as that will allow us to assume that the errors in those bins are gaussian for the fitting technique used here. If you would like to change any of these parameters simply set each keyword to the values that you want when calling the `set_spectral_fit_parameters` method. For example, if we wanted to fit spectra from 8-300 eV, with either the Band or Comptonized functions, for energy bins with at least 20 photons in them we would do `observation.set_spectral_fit_parameters(spectral_fit_energy_range=[8,300], spectral_fit_energy_unit=unit.eV, approx_gaussian_error_num=20)`"
+    "By running the code below, we can see that we just initalized the spectral energy range that we want the spectral fitting to occur over to be from 8 to 40000 keV. We also specified that we want to fit any energy bins that have greater than 10 photons in them, as that will allow us to assume that the errors in those bins are gaussian for the fitting technique used here. If you would like to change any of these parameters simply set each keyword to the values that you want when calling the `set_spectral_fit_parameters` method. For example, if we wanted to fit spectra from 8-300 eV, with either the Band or Comptonized functions, for energy bins with at least 20 photons in them we would do `observation.set_spectral_fit_parameters(spectral_fit_energy_range=[8,300]*unit.eV, approx_gaussian_error_num=20)`"
    ]
   },
   {
@@ -849,7 +857,7 @@
    "source": [
     "Time resolved polarizations can be calculated simply by changing the time bins that the photons are collected within. If we want to calculate the polarization for a given type of photon in the simulation, we can also pass the `photon_type` keyword into our method call, the same as what we would do for calculating a spectrum.\n",
     "\n",
-    "Similar to the way that we can specify an energy range to calculate the spectra within, we can also specify an energy range over which the polarization is calculated. This is done by setting the `energy_range` and `energy_unit` parameters when calling the `polarization` method. For example, if we wanted to calculated the time integrated polarization in the optical enegies from 1.5-7.7 eV then we would do:"
+    "Similar to the way that we can specify an energy range to calculate the spectra within, we can also specify an energy range over which the polarization is calculated. This is done by setting the `energy_range` parameter when calling the `polarization` method. For example, if we wanted to calculated the time integrated polarization in the optical enegies from 1.5-7.7 eV then we would do:"
    ]
   },
   {
@@ -1119,7 +1127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If any of the fields are not specified and left off of the call to create the instrument, then they will be ignored and the calculations for those mock observables will default to being integrated over energy. For example if we did `pm.Instrument(name='Fermi+Polar', polarization_energy_range=[20,800], polarization_energy_unit=unit.keV, spectral_energy_range=[8,40000], spectral_energy_unit=unit.keV` then the light cuves that we could calculate after loading the instruent into our observation object would be bolometric light curves. If we left off `spectral_energy_range=[8,40000]` and `spectral_energy_unit=unit.keV` then the spectra would be calculted for the default energy ranges in the spectrum method.\n",
+    "If any of the fields are not specified and left off of the call to create the instrument, then they will be ignored and the calculations for those mock observables will default to being integrated over energy. For example if we did `pm.Instrument(name='Fermi+Polar', polarization_energy_range=[20,800]*unit.keV, spectral_energy_range=[8,40000]*unit.keV` then the light cuves that we could calculate after loading the instruent into our observation object would be bolometric light curves. If we left off `spectral_energy_range=[8,40000]*unit.keV` then the spectra would be calculted for the default energy ranges in the spectrum method.\n",
     "\n",
     "Now that we have our instrument, we can tell our observation object that we want to use this instrument by loading it with:"
    ]
@@ -19687,31 +19695,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(282.22045600980465, 4.636364990341388) 0.26012042969418586\n",
-      "(349.6560585567853, 4.7574222806960496) 0.21395411880375168\n",
-      "(300.28159920239466, 3.8561073575227116) 0.035822802186929806\n",
-      "(184.8717050010445, 4.130125779133903) 0.1671588027953336\n",
-      "(106.02487249926892, 6.075146621722064) 0.08049796365485072\n",
-      "(66.25932021676353, 6.093511913269136) 0.08052337080179517\n",
-      "(49.224274523989635, 4.153156479817823) 0.10739766075444519\n",
-      "(50.12321434479952, 5.1817228589414235) 0.04633119966725068\n",
-      "(39.72429075058065, 3.446848949149033) 0.13824185487752158\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i,j in zip(spec_dict_list,pol_dict_list):\n",
-    "    print(pm.calc_epk_error(i['fit']['alpha'], i['fit']['break_energy'].value, \\\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\talpha_error=i['fit_errors']['alpha_errors'], \\\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tbreak_energy_error=i['fit_errors']['break_energy_errors'].value), j['pol_deg'])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
